added openweathermap api key

--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,9 @@
             <button id="generate">Generate</button>
         </div>
         <div id="entryHolder">
-            <div id="date"></div>
-            <div id="temp"></div>
-            <div id="content"></div>
+            <div id="date"><p>date goes here</p></div>
+            <div id="temp"><p>temp goes here</p></div>
+            <div id="content"><p>user's feelings go here</p></div>
         </div>
     </body>
 </html>
