update app.js to get weather data

--- a/website/index.html
+++ b/website/index.html
@@ -17,4 +17,5 @@
             <div id="content"><p>user's feelings go here</p></div>
         </div>
     </body>
+    <script src="./app.js"></script>
 </html>
