--- a/website/index.html
+++ b/website/index.html
@@ -8,15 +8,17 @@
     <body>
         <header><h1>Michael's Weather Journal</h1></header>
         <div id="inputHolder">
-            <p>Enter your zip code:</p>
-            <input placeholder="enter zip code here" id="zip">
-            <p>How are you feeling today?</p>
-            <textarea id="feelings" placeholder="How are you feeling today"></textarea>
-            <button id="generate">Create entry!</button>
+            <form id="inputForm">
+                <label>Enter your zip code:</label>
+                <input placeholder="enter zip code here" id="zip">
+                <label>How are you feeling today?</label>
+                <textarea id="feelings" placeholder="How are you feeling today?" maxlength="160"></textarea>
+                <button type='button' id="generate">Create entry!</button>
+            </form>
         </div>
         <div id="entryHolder">
-            <h2>Latest Entry</h2>
-            <div id="date"><p>No entry yet...</p></div>
+            <h3>Latest Entry</h3>
+            <div id="date"><p>Please add an entry</p></div>
             <div id="temp"></div>
             <div id="content"></div>
         </div>
